# ITCZ-Localizer

./: Loczcit_IQR_Previsao_ECMWF_IFS_MOD.ipynb  MANIFEST.in  README.md  pyproject.toml
examples/: run_analysis.py
notebooks/: Loczcit_IQR_in_Google_Colab.ipynb  data_loader.ipynb  data_loader_ecmwf_forecast.ipynb  data_loader_era5.ipynb  flip_Loczcit_IQR.ipynb  processor_and_Interpolator.ipynb  work_flow.ipynb
src/data/netcdf/: OLR_climatologia_mensal_1994_2023_-45_45_-80_10.nc
src/data/shapefiles/: Area_LOCZCIT.parquet  UFs_BR.parquet  UFs_BR.qmd
src/loczcit_iqr/: __init__.py
src/loczcit_iqr/core/: __init__.py  climatologia.py  data_loader.py  data_loader_ecmwf_forecast.py  data_loader_era5.py  iqr_detector.py  processor.py  spline_interpolator.py
src/loczcit_iqr/plotting/: __init__.py  style.py  visualizer.py
src/loczcit_iqr/utils/: __init__.py  pentadas.py  validators.py
